--- a/fronted/css/landing.css
+++ b/fronted/css/landing.css
@@ -13,6 +13,7 @@
     justify-content: center;
     z-index: 10000;
     animation: fadeOut 0.5s ease-in-out 2s forwards;
+}
 
 .loading-content {
     text-align: center;
